--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "nodemon": "^2.0.14"
   },
   "dependencies": {
-    "node-telegram-bot-api": "^0.54.0"
+    "node-telegram-bot-api": "^0.54.0",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.9.0"
   }
 }
