--- a/package.json
+++ b/package.json
@@ -2,21 +2,25 @@
   "name": "tg-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "start:dev": "nodemon index",
-    "start:prod": "node index"
+    "start:dev": "nodemon",
+    "start:prod": "node build/index.js",
+    "build": "tsc --allowJs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.14"
+    "@types/node": "^16.11.6",
+    "@types/node-telegram-bot-api": "^0.53.2",
+    "nodemon": "^2.0.14",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.4"
   },
   "dependencies": {
-    "node-telegram-bot-api": "^0.54.0",
-    "pg": "^8.7.1",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.9.0"
+    "dotenv": "^10.0.0",
+    "mongoose": "^6.0.12",
+    "node-telegram-bot-api": "^0.54.0"
   }
 }
